--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>JavaScript Modal</h1>
+    <button id="open-modal">Abrir</button>
 </body>
 </html>
