--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
 <body>
     <h1>JavaScript Modal</h1>
     <button id="open-modal">Abrir</button>
+    <div id="fade"></div>
+    <div id="modal">
+        <div class="modal-header">
+            <h2>Esse é o meu modal</h2>
+            <button id="close-modal">Fechar</button>
+        </div>
+        <div class="modal-body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus numquam totam, facere quas maxime et fuga sit sequi vero facilis corrupti deserunt voluptate natus debitis, esse neque a consequuntur sint!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus numquam totam, facere quas maxime et fuga sit sequi vero facilis corrupti deserunt voluptate natus debitis, esse neque a consequuntur sint!</p>        
+        </div>
+    </div>
 </body>
 </html>
