--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <h1>JavaScript Modal</h1>
     <button id="open-modal">Abrir</button>
-    <div id="fade"></div>
-    <div id="modal">
+    <div id="fade" class="hide"></div>
+    <div id="modal" class="hide">
         <div class="modal-header">
             <h2>Esse é o meu modal</h2>
             <button id="close-modal">Fechar</button>
